# MagangBanyubramanta_GilangGallanIndrana

Matlab/: untitled1.slx
ROS/install/: setup.ps1  setup.sh
ROS/install/controller/lib/controller/: control
ROS/install/controller/share/controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ROS/install/flare/share/flare/: local_setup.bash  package.sh  package.xml
ROS/log/: latest_build
ROS/src/controller/: CMakeLists.txt
ROS/src/controller/src/: robot_controller.cpp
ROS/src/flare/: CMakeLists.txt
ROS/src/flare/src/: main.cpp
ROS/src/yolo/: CMakeLists.txt  package.xml
ROS/src/yolo/src/: main.cpp
install/: local_setup.sh  setup.bash  setup.zsh
install/controller/lib/controller/: publisher
install/controller/share/controller/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  controllerConfig-version.cmake  controllerConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/controller/share/controller/environment/: library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/flare/lib/flare/: detect
install/flare/share/flare/: local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.zsh
log/: latest_build
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: mainbackup.cpp  robot_controller.cpp
src/flare/: package.xml
(+91 files in other folders)
